Grafana_Influx_prometheus_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: Grafana_Influx_prometheus_network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/Grafana_Influx_prometheus_network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/Grafana_Influx_prometheus_network: "true"
